fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 body {
   height: 100vh;
   background: #10202efc;
